Fix card layout on mobile

--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ section {
   display: flex;
   align-items: center;
   padding: 1rem;
-  margin-block-end: 2rem;
+  margin-block: 2rem 1rem;
 }
 
 .card a {
@@ -432,8 +432,7 @@ nav li {
     display: inline-block;
     width: fit-content;
     margin-inline: 0.3rem;
-    margin-block-start: 3rem;
-    margin-block-end: 1.5rem;
+    margin-block: 3rem 1.5rem;
   }
 
   .card span {    
